--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ TELEGRAM_HASH = "511716ff4449dcd96f35fcabdea68be1"
 BASE_URL_OF_BOT = "https://testmirrorbot10213.herokuapp.com"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = "-1001600622709" # Split by space
+AUTHORIZED_CHATS = "-1001600622709 -1001509267774" # Split by space
 SUDO_USERS = "5178852631"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
