--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5757344324:AAHC1x0BefuB9GuMWIJvT0I3iHexIOnGIh4"
-GDRIVE_FOLDER_ID = "1KyaOkYnn8gvjiY4H94WofG9hMWMC4QkF"
+GDRIVE_FOLDER_ID = "165uz8QFlgQEZdwPQyY9awhPmLeW4OdCn"
 OWNER_ID = 1334286701
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 50
@@ -15,12 +15,12 @@ AUTHORIZED_CHATS = "-1001600622709 -1001509267774" # Split by space
 SUDO_USERS = "5178852631"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
-INDEX_URL = "https://kawserplayz.ml/7:/MaximoFilm.com"
+INDEX_URL = ""
 STATUS_LIMIT = ""  # Recommended limit is 4
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = "a0YwFDhQ"
-MEGA_EMAIL_ID = "mafujmafuj10@gmail.com"
-MEGA_PASSWORD = "1912729337"
+MEGA_API_KEY = ""
+MEGA_EMAIL_ID = ""
+MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = ""
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = "true"
