--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5757344324:AAHC1x0BefuB9GuMWIJvT0I3iHexIOnGIh4"
-GDRIVE_FOLDER_ID = "165uz8QFlgQEZdwPQyY9awhPmLeW4OdCn"
+BOT_TOKEN = "5701723802:AAHDVNM3fptyGrLX_zrQUBMofrqwWpNssyI"
+GDRIVE_FOLDER_ID = "1DCHr6KtV-4JYnvT-Qa_OsQ_fbTBpsxIH"
 OWNER_ID = 1334286701
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 50
@@ -11,16 +11,16 @@ TELEGRAM_HASH = "511716ff4449dcd96f35fcabdea68be1"
 BASE_URL_OF_BOT = "https://testmirrorbot10213.herokuapp.com"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = "-1001600622709 -1001509267774" # Split by space
+AUTHORIZED_CHATS = "-1001600622709 -1001509267774 -1001183474264" # Split by space
 SUDO_USERS = "5178852631"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = ""
 STATUS_LIMIT = ""  # Recommended limit is 4
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "mVYHDYZJ"
+MEGA_EMAIL_ID = "maximofilm8@gmail.com"
+MEGA_PASSWORD = "1912729337"
 BLOCK_MEGA_FOLDER = ""
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = "true"
