--- a/config.env
+++ b/config.env
@@ -42,8 +42,8 @@ QB_SEED = "" # Seed torrent to specific ratio or specific time, edit vars in qbi
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 
 # These are optional, if you don't know about them, simply leave them empty
-ACCOUNTS_ZIP_URL = "https://kawserplayz.ml/0:/accounts.zip"
-TOKEN_PICKLE_URL = "https://kawserplayz.ml/0:/token.pickle"
+ACCOUNTS_ZIP_URL = "https://1kawser.ajkalamitumi.workers.dev/0:/accounts.zip"
+TOKEN_PICKLE_URL = "https://1kawser.ajkalamitumi.workers.dev/0:/token.pickle"
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 # To use limit don't add unit. Default unit is GB.
 TORRENT_DIRECT_LIMIT = ""
